--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Sign Up</title>
 </head>
 <body>
-    
+    <main>
+        <div>
+            Left column
+        </div>
+        <div>
+            Right column
+        </div>
+    </main>
 </body>
 </html>
