Lefft coluimn content and style using classes #10

--- a/index.html
+++ b/index.html
@@ -8,13 +8,21 @@
     <title>Sign Up</title>
 </head>
 <body>
-    <main>
-        <div>
-            Left column
+    <main class="container">
+        <div class="left-column">
+            <h1 class="main-title">Sign Up</h1>
+            <div class="bottom-links">
+                <a href="#" class="link">Privacy policy</a>
+                <span class="symbol">&amp;</span>
+                <a href="#" class="link">terms of service</a>
+
+            </div>
         </div>
-        <div>
+        <div class="right-column">
             Right column
         </div>
     </main>
 </body>
 </html>
+
+
