--- a/index.html
+++ b/index.html
@@ -21,21 +21,24 @@
         <div class="right-column">
             <form class="form">
                 <div class="form-row">
-                    <label for="">Username</label>
-                    <input type="text"></div>
+                    <label for="username">Username</label>
+                    <input id ="username" required placeholder="Your username"type="text"></div>
                 <div class="form-row">
-                    <label for="">Email</label>
-                    <input type="text"></div>
+                    <label for="email">Email</label>
+                    <input id="email" required placeholder="Your email address"type="email">
+                </div>
                 <div class="form-row">
-                    <label for="">Password</label>
-                    <input type="text"></div>
+                    <label for="password">Password</label>
+                    <input id="password" required placeholder="Your password"type="password">
+                </div>
                 <div class="form-row">
-                    <label for="">Repeat password</label>
-                    <input type="text"></div>
+                    <label for="rpassword">Repeat password</label>
+                    <input id="rpassword"required placeholder="Repeat password"type="password">
+                </div>
                 <div class="form-row">
                    <button type="submit" >Get started</button>
                    <span>or</span>
-                <a href="#">Sign in</a>
+                   <a href="#">Sign in</a>
                 </div>
             </form>
         </div>
