--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             </div>
         </div>
         <div class="right-column">
+            <div class="close">x</div>
             <form class="form">
                 <div class="form-row">
                     <label for="username">Username</label>
@@ -33,7 +34,7 @@
                 </div>
                 <div class="form-row">
                     <label for="rpassword">Repeat password</label>
-                    <input id="rpassword"required placeholder="Repeat password"type="password">
+                    <input id="rpassword"required placeholder="Same password"type="password">
                 </div>
                 <div class="form-row">
                    <button type="submit" >Get started</button>
